--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<p></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Lab 1</title>
+</head>
+<body>
+	<h1>ITMD362 Lab1/h1>
+  <p>Hi I'm Yixin.</p>
+  <p>My hometown is Wuhan， China. It's a beautiful city. I really hope the city can get through the virus crisis this time.</p>
+</body>
+</html>
