--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Lab 1</title>
 </head>
 <body>
-	<h1>ITMD362 Lab1/h1>
+	<h1>ITMD362 Lab1</h1>
   <p>Hi I'm Yixin.</p>
   <p>My hometown is Wuhan， China. It's a beautiful city. I really hope the city can get through the virus crisis this time.</p>
 </body>
